--- a/ecomprj/templates/core/registration.html
+++ b/ecomprj/templates/core/registration.html
@@ -117,7 +117,7 @@
                         
                     </form>
                     <div class="google-signin">
-                        <a href="{% url 'core:google' %}">
+                        {% comment %} <a href="{% url 'core:google' %}"> {% endcomment %}
                             <img src="{% static 'path_to_your_google_logo.png' %}" alt="Google Sign-In" width="120">
                         </a>
                     </div>
