cleared every set

--- a/ecomprj/templates/core/checkout.html
+++ b/ecomprj/templates/core/checkout.html
@@ -79,7 +79,7 @@ User
                                         </div>
                                     </div>
                                     <br>
-                                    <a href="{% url 'core:view_address' %}" class="btn btn-secondary btn-sm active" role="button" aria-pressed="true">Manage Address</a>
+                                    <a href="{% url 'core:address' %}" class="btn btn-secondary btn-sm active" role="button" aria-pressed="true">Manage Address</a>
 
                                     <br><br>
                                     <div class="different-address">
@@ -90,7 +90,7 @@ User
                                             </h3>
                                         </div>
                                         <div id="ship-box-info" class="row">
-                                            <a href="{% url 'core:view_add_address' %}">
+                                            <a href="{% url 'core:add_address' %}">
                                             <button type="button" class="btn btn-primary btn-small mt-2" data-toggle="modal" data-target="#exampleModalCenters">
                                                 Add New Address
                                             </button>
