--- a/ecomprj/templates/core/profile_user.html
+++ b/ecomprj/templates/core/profile_user.html
@@ -88,7 +88,7 @@
                         </div>
                     </div>
                     <a href="{% url 'core:manage_profile' %}" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Manage Profile</a>
-                    <a href="{% url 'core:view_address' %}" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Manage Address</a>
+                    <a href="{% url 'core:address' %}" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Manage Address</a>
                     <a href="{% url 'core:wallet' %}" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Wallet Balance</a>
 
                     {% comment %} <a href="{% url 'core:change_password' %}" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Cart</a> {% endcomment %}
