--- a/ecomprj/templates/core/update_address.html
+++ b/ecomprj/templates/core/update_address.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="breadcrumb-content">
             <ul>
-                <li><a href="{% url 'core:view_address' %}"> Address</a></li>
+                <li><a href="{% url 'core:address' %}"> Address</a></li>
                 <li class="active">Edit Address</li>
             </ul>
         </div>
