--- a/ecomprj/templates/core/Add_address.html
+++ b/ecomprj/templates/core/Add_address.html
@@ -8,7 +8,7 @@
   <div class="container">
       <div class="breadcrumb-content">
           <ul>
-              <li><a href="{% url 'core:view_address' %}"> Address</a></li>
+              <li><a href="{% url 'core:address' %}"> Address</a></li>
               <li class="active">Add Address</li>
           </ul>
       </div>
@@ -18,7 +18,7 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
         <h2 class="text-center mb-4" style="color: grey;">Add Address</h2>
-        <form action="{% url 'core:view_add_address' %}" method="post" enctype="multipart/form-data">
+        <form action="{% url 'core:add_address' %}" method="post" enctype="multipart/form-data">
           {% csrf_token %}
           <div class="form-row">
             <div class="form-group col-md-8">
