--- a/ecomprj/templates/core/Address.html
+++ b/ecomprj/templates/core/Address.html
@@ -49,7 +49,7 @@
     </div>
     <div class="row justify-content-end">
         <div class="col-md-8">
-            <a href="{% url 'core:view_add_address' %}" class="btn btn-secondary btn-lg active" role="button"
+            <a href="{% url 'core:add_address' %}" class="btn btn-secondary btn-lg active" role="button"
                 aria-pressed="true">Add Address</a>
             <br>
             <br>
