--- a/ecomprj/templates/core/wallet.html
+++ b/ecomprj/templates/core/wallet.html
@@ -5,6 +5,8 @@
     <div class="row">
         <div class="col-md-8 mt-10 mx-auto">
             <h4 style="color: black;">Balance: {{ total_wallet_balance }}</h4>
+            <h5 style="color: green;">Total Credited: {{ total_credited_amount }}</h5>
+            <h5 style="color: red;">Total Debited: {{ total_debited_amount }}</h5>
             <form id="recharge-form" action="/create-razorpay-order/">
                 <div class="form-group">
                     <label for="amount">Enter Amount to Recharge:</label>
@@ -19,21 +21,22 @@
                         <th>Created At</th>
                         <th>Status</th>
                         <th>Amount</th>
-                        {% comment %} <-- Column for action button --> {% endcomment %}
+                        <th>Transaction Type</th>
                     </tr>
                 </thead>
                 <tbody class="align-middle">
                     {% for wallet in wallets %}
                     <tr>
                         <td class="align-middle">{{ wallet.created_at }}</td>
+                        <td class="align-middle">{{ wallet.status }}</td>
+                        <td class="align-middle">{{ wallet.amount }}</td>
                         <td class="align-middle">
-                            {% if wallet.status %}
-                                {{ wallet.status }}
+                            {% if wallet.is_credit %}
+                                Credited
                             {% else %}
-                                Added
+                                Debited
                             {% endif %}
                         </td>
-                        <td class="align-middle">{{ wallet.amount }}</td>
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -42,8 +45,7 @@
     </div>
 </div>
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
- <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-  
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function() {
         document.querySelector('#recharge-form').addEventListener('submit', function(event) {
@@ -51,9 +53,8 @@
             var amount = document.querySelector('#amount').value;
             initiateRazorpayPayment(amount);
         });
-
-       
     });
+
     function initiateRazorpayPayment(amount) {
         fetch('/create-razorpay-order/', {
             method: 'POST',
@@ -69,10 +70,10 @@
         .then(function(data) {
             var options = {
                 key: 'rzp_test_oR7x1WyMRe9zxr',
-                amount: data.total* 100,  // Corrected here
+                amount: data.total * 100,
                 currency: 'INR',
                 name: 'TECHX',
-                description: 'Adeed to wallet',
+                description: 'Added to wallet',
                 image: 'https://static-00.iconduck.com/assets.00/bill-payment-icon-2048x2048-vpew78n5.png',
                 handler: function(responseb) {
                     window.location.href = '/razorpay/' + selects;
@@ -86,8 +87,8 @@
                     address: 'Razorpay Corporate Office'
                 },
                 theme: {
-                    color:  'rgb(0,174,191);'
-                }   
+                    color: 'rgb(0,174,191);'
+                }
             };
     
             var rzp = new Razorpay(options);
@@ -97,10 +98,5 @@
             console.error('Error:', error);
         });
     }
-    
 </script>
-
-
-
-
 {% endblock content %}
